Bug 802399: set capture index for audio input when device is Allocate()ed, plug VoEHw leak r=derf